<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileDetailsActivity">

    <ImageView
        android:id="@+id/ProfDetailBase"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/base"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profDetailCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ProfDetailBase" />

    <ImageView
        android:id="@+id/ProfDetailAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="@id/profDetailCover"
        app:layout_constraintEnd_toEndOf="@id/profDetailCover"
        app:layout_constraintStart_toStartOf="@id/profDetailCover"
        app:layout_constraintTop_toBottomOf="@id/profDetailCover" />

    <ImageView
        android:id="@+id/ProfDetailChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/change"
        app:layout_constraintBottom_toBottomOf="@id/ProfDetailAvatar"
        app:layout_constraintEnd_toEndOf="@id/ProfDetailAvatar"/>

    <TextView
        android:id="@+id/ProfDetailNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ProfDetailAvatar" />

    <EditText
        android:id="@+id/ProfDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/Jimothy_Barnes"
        app:layout_constraintBottom_toBottomOf="@id/ProfDetailNameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ProfDetailNameLabel" />

    <TextView
        android:id="@+id/ProfDetailPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/PhoneNum"
        app:layout_constraintStart_toStartOf="@id/ProfDetailNameLabel"
        app:layout_constraintTop_toBottomOf="@id/ProfDetailNameLabel" />

    <EditText
        android:id="@+id/ProfDetailPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text="@string/Num"
        app:layout_constraintBottom_toBottomOf="@id/ProfDetailPhoneLabel"
        app:layout_constraintEnd_toEndOf="@id/ProfDetailName"
        app:layout_constraintTop_toTopOf="@id/ProfDetailPhoneLabel" />

    <TextView
        android:id="@+id/ProfDetailAgeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="@id/ProfDetailPhoneLabel"
        app:layout_constraintTop_toBottomOf="@id/ProfDetailPhoneLabel" />

    <EditText
        android:id="@+id/ProfDetailAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/thirty"
        app:layout_constraintBottom_toBottomOf="@id/ProfDetailAgeLabel"
        app:layout_constraintEnd_toEndOf="@id/ProfDetailPhone"
        app:layout_constraintTop_toTopOf="@id/ProfDetailAgeLabel" />

    <Switch
        android:id="@+id/ProfDetailPrivacySwitch"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/privacy"
        app:layout_constraintStart_toStartOf="@id/ProfDetailAgeLabel"
        app:layout_constraintTop_toBottomOf="@id/ProfDetailAgeLabel"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/ProfDetailInterests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Interests"
        app:layout_constraintStart_toStartOf="@id/ProfDetailPrivacySwitch"
        app:layout_constraintTop_toBottomOf="@id/ProfDetailPrivacySwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>