<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/signInLogo"
        android:layout_width="167dp"
        android:layout_height="156dp"


        android:layout_marginTop="@android:dimen/app_icon_size"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngfuel_com" />

    <EditText
        android:id="@+id/SignInTextPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/SignInEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/SignInEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/SignInEmailAddress" />

    <EditText
        android:id="@+id/SignInEmailAddress"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/signInLogo"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/signInLogo"
        app:layout_constraintTop_toBottomOf="@+id/signInLogo" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:gravity="center"
        android:lineSpacingExtra="0.7sp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/create_Account"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/loginAsGuest"
        app:layout_constraintEnd_toEndOf="@+id/loginAsGuest"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/loginAsGuest" />

    <TextView
        android:id="@+id/loginAsGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@android:dimen/app_icon_size"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="0.7sp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/Login_as_Guest"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_rect_button_black"
        android:text="@string/Sign_In"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/SignInTextPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/SignInTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/SignInTextPassword" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/keep_signed_in"
        app:layout_constraintEnd_toEndOf="@+id/signinButton"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="@+id/signinButton"
        app:layout_constraintTop_toBottomOf="@+id/signinButton" />


</androidx.constraintlayout.widget.ConstraintLayout>